guestbook/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: guestbook-ui
          servicePort: 80
    host: guestbook.local.lncd.pl
  tls:
  - hosts:
    - guestbook.local.lncd.pl
    secretName: lncd
